# rewwise

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
analysis/: Cargo.toml
analysis/src/: audio_routable.rs  dictionary.rs  fnv.rs  label.rs  lib.rs
desktop/: Cargo.toml  index.html
desktop/src/: app.rs  hirc_editor.rs  main.rs  settings.rs  soundbank.rs  soundbank_editor.rs  soundbank_selector.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src/components/: file_selector.rs  mod.rs  topbar.rs
desktop/worker/: Cargo.toml
desktop/worker/src/: lib.rs
format/: Cargo.toml
format/src/: bnk.rs  export.rs  helper.rs  lib.rs  serialization.rs
util/: Cargo.toml
