[workspace]
members = [
    "util",
    "format",
    "analysis",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/vswarte/rewwise"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
