[package]
name = "rewwise-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
yew-hooks = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
gloo-file = "0.3"
gloo-console = "0.3"
gloo-worker = { version = "0.5", features = ["futures"] }
wwise_format = { path = "../format" }
rewwise-worker = { path = "./worker" }

[workspace]
members = ["src-tauri"]
