[package]
name = "wwise_format"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
deku = "0.16"
base64 = "0.21"
clap = { version = "4.4.18", features = ["derive"] }
pretty_assertions = "1.4"
