[package]
name = "wwise_util"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false

[dependencies]
wwise_format = { path = "../format" }
wwise_analysis = { path = "../analysis" }
clap = { version="4", features = ["derive"] }
tabbycat = "0.1.3"
